Beef up URL validation 1) SimpleUrlNormalizer should log errors rather than throw exceptions. The caller should now feel free to call this without worrying about exceptions.2) SimpleUrlValidator should return false for all protocols other than http: and https:3) SimpleUrlValidator should return false if either constructing a URI or a URL from the input throws an exception.4) GroupFunction.operate catches any RuntimeExceptions thrown when the IGroupingKeyGenerator.getGroupingKey tries to construct a URL. In this case (which shouldn't happen if the caller has properly used normalize and validate) it just skips outputting this grouping key. If I'm not mistaken, this means the URL will get completely stripped out from the pipe.